Fix alignment in panel without result

--- a/src/components/PrimitivePanel/PrimitivePanel.scss
+++ b/src/components/PrimitivePanel/PrimitivePanel.scss
@@ -16,6 +16,7 @@
 
   &--no-result {
     min-height: 40px;
+    align-items: center;
   }
 }
 
